--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,66 +1,79 @@
 # 2024-04-19
 
-共 220 条
+共 231 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 14:08:29 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 15:00:48 GMT+0800 (China Standard Time) -->
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
-1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
+1. [俄军一架战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架战略轰炸机坠毁)
 1. [谷雨时节 抢抓农时](https://so.toutiao.com/search?keyword=谷雨时节+抢抓农时)
 1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
+1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
 1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
-1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
+1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
-1. [外交部用三个不接受回应南海仲裁案](https://so.toutiao.com/search?keyword=外交部用三个不接受回应南海仲裁案)
+1. [向12306公众号发疯能求票成功？](https://so.toutiao.com/search?keyword=向12306公众号发疯能求票成功？)
 1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
 1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
-1. [刘亦菲参加活动保镖出圈](https://so.toutiao.com/search?keyword=刘亦菲参加活动保镖出圈)
-1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
-1. [官方辟谣少年持钢刀飙车致2人伤亡](https://so.toutiao.com/search?keyword=官方辟谣少年持钢刀飙车致2人伤亡)
-1. [刘亦菲裙子好像钢丝球开花](https://so.toutiao.com/search?keyword=刘亦菲裙子好像钢丝球开花)
+1. [鄂尔多斯警方抓获38名卖淫嫖娼者](https://so.toutiao.com/search?keyword=鄂尔多斯警方抓获38名卖淫嫖娼者)
 1. [伊朗在伊斯法罕上空拦截约5个目标](https://so.toutiao.com/search?keyword=伊朗在伊斯法罕上空拦截约5个目标)
-1. [五一不调休可行吗](https://so.toutiao.com/search?keyword=五一不调休可行吗)
-1. [网友称华为Pura70比演唱会票还难抢](https://so.toutiao.com/search?keyword=网友称华为Pura70比演唱会票还难抢)
-1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
-1. [成都居民称换燃气表20天后欠费1.7万](https://so.toutiao.com/search?keyword=成都居民称换燃气表20天后欠费1.7万)
+1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [外交部用三个不接受回应南海仲裁案](https://so.toutiao.com/search?keyword=外交部用三个不接受回应南海仲裁案)
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
 1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
-1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
-1. [台学者：美国警惕赖清德政策路线](https://so.toutiao.com/search?keyword=台学者：美国警惕赖清德政策路线)
-1. [全红婵陈芋汐跳水世界杯夺冠](https://so.toutiao.com/search?keyword=全红婵陈芋汐跳水世界杯夺冠)
-1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
 1. [男子欠屠宰场40万成员工打工还债](https://so.toutiao.com/search?keyword=男子欠屠宰场40万成员工打工还债)
-1. [媒体专访《承欢记》导演](https://so.toutiao.com/search?keyword=媒体专访《承欢记》导演)
+1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
 1. [伊朗防空系统已在多省份上空启动](https://so.toutiao.com/search?keyword=伊朗防空系统已在多省份上空启动)
 1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
-1. [舒淇冯德伦庆结婚纪念日](https://so.toutiao.com/search?keyword=舒淇冯德伦庆结婚纪念日)
+1. [许君聪每根头发都有名字](https://so.toutiao.com/search?keyword=许君聪每根头发都有名字)
+1. [伊朗媒体：未收到空袭造成爆炸报告](https://so.toutiao.com/search?keyword=伊朗媒体：未收到空袭造成爆炸报告)
 1. [男子割喉杀妻一审被判处死缓](https://so.toutiao.com/search?keyword=男子割喉杀妻一审被判处死缓)
+1. [男子收到“不雅床照”被索要40万元](https://so.toutiao.com/search?keyword=男子收到“不雅床照”被索要40万元)
+1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
+1. [舒淇冯德伦庆结婚纪念日](https://so.toutiao.com/search?keyword=舒淇冯德伦庆结婚纪念日)
+1. [对话被丈夫家暴割喉女子父母](https://so.toutiao.com/search?keyword=对话被丈夫家暴割喉女子父母)
+1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
+1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
+1. [刘亦菲参加活动保镖出圈](https://so.toutiao.com/search?keyword=刘亦菲参加活动保镖出圈)
 1. [以色列袭击伊朗正值伊最高领袖生日](https://so.toutiao.com/search?keyword=以色列袭击伊朗正值伊最高领袖生日)
-1. [金价要见顶了吗](https://so.toutiao.com/search?keyword=金价要见顶了吗)
 1. [董宇辉亮相北京国际电影节](https://so.toutiao.com/search?keyword=董宇辉亮相北京国际电影节)
-1. [美官员：以打击目标不含伊朗核设施](https://so.toutiao.com/search?keyword=美官员：以打击目标不含伊朗核设施)
-1. [老人常到妻子安葬地静坐](https://so.toutiao.com/search?keyword=老人常到妻子安葬地静坐)
+1. [五一不调休可行吗](https://so.toutiao.com/search?keyword=五一不调休可行吗)
+1. [以军称早先以色列北部的警报是误报](https://so.toutiao.com/search?keyword=以军称早先以色列北部的警报是误报)
+1. [城管制止违停时遭车主故意碾压脚部](https://so.toutiao.com/search?keyword=城管制止违停时遭车主故意碾压脚部)
+1. [刘亦菲裙子好像钢丝球开花](https://so.toutiao.com/search?keyword=刘亦菲裙子好像钢丝球开花)
+1. [以媒：多架飞往伊朗的航班改道](https://so.toutiao.com/search?keyword=以媒：多架飞往伊朗的航班改道)
+1. [深圳城管入户执法？官方回应](https://so.toutiao.com/search?keyword=深圳城管入户执法？官方回应)
+1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
 1. [黄金和美元为何同涨](https://so.toutiao.com/search?keyword=黄金和美元为何同涨)
+1. [老人常到妻子安葬地静坐](https://so.toutiao.com/search?keyword=老人常到妻子安葬地静坐)
+1. [“王婆”变“李婆” 万岁山还火吗](https://so.toutiao.com/search?keyword=“王婆”变“李婆”+万岁山还火吗)
+1. [金价要见顶了吗](https://so.toutiao.com/search?keyword=金价要见顶了吗)
+1. [全红婵陈芋汐跳水世界杯夺冠](https://so.toutiao.com/search?keyword=全红婵陈芋汐跳水世界杯夺冠)
+1. [刘畊宏现身周杰伦演唱会](https://so.toutiao.com/search?keyword=刘畊宏现身周杰伦演唱会)
+1. [非洲小伙为河南企业工作收入提高](https://so.toutiao.com/search?keyword=非洲小伙为河南企业工作收入提高)
+1. [官方辟谣少年持钢刀飙车致2人伤亡](https://so.toutiao.com/search?keyword=官方辟谣少年持钢刀飙车致2人伤亡)
+1. [网友称华为Pura70比演唱会票还难抢](https://so.toutiao.com/search?keyword=网友称华为Pura70比演唱会票还难抢)
+1. [成都居民称换燃气表20天后欠费1.7万](https://so.toutiao.com/search?keyword=成都居民称换燃气表20天后欠费1.7万)
+1. [台学者：美国警惕赖清德政策路线](https://so.toutiao.com/search?keyword=台学者：美国警惕赖清德政策路线)
+1. [媒体专访《承欢记》导演](https://so.toutiao.com/search?keyword=媒体专访《承欢记》导演)
+1. [美官员：以打击目标不含伊朗核设施](https://so.toutiao.com/search?keyword=美官员：以打击目标不含伊朗核设施)
 1. [伊朗防空系统击落数架无人机](https://so.toutiao.com/search?keyword=伊朗防空系统击落数架无人机)
 1. [赤膊男子扛升降杆街头乱晃见车就砸](https://so.toutiao.com/search?keyword=赤膊男子扛升降杆街头乱晃见车就砸)
 1. [俄军一架图-22M3战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架图-22M3战略轰炸机坠毁)
 1. [美媒：以方提前通知美国将实施报复](https://so.toutiao.com/search?keyword=美媒：以方提前通知美国将实施报复)
 1. [外媒预测掘金湖人系列赛G1胜率](https://so.toutiao.com/search?keyword=外媒预测掘金湖人系列赛G1胜率)
 1. [美团CEO王兴点评理想L6](https://so.toutiao.com/search?keyword=美团CEO王兴点评理想L6)
-1. [非洲小伙为河南企业工作收入提高](https://so.toutiao.com/search?keyword=非洲小伙为河南企业工作收入提高)
 1. [网友批知名书法家作品乱如天书](https://so.toutiao.com/search?keyword=网友批知名书法家作品乱如天书)
-1. [深圳城管入户执法？官方回应](https://so.toutiao.com/search?keyword=深圳城管入户执法？官方回应)
 1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
-1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
-1. [“王婆”变“李婆” 万岁山还火吗](https://so.toutiao.com/search?keyword=“王婆”变“李婆”+万岁山还火吗)
-1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
 1. [巴勒斯坦入联决议草案遭美一票否决](https://so.toutiao.com/search?keyword=巴勒斯坦入联决议草案遭美一票否决)
 1. [新款问界M5官图发布](https://so.toutiao.com/search?keyword=新款问界M5官图发布)
 1. [张延廷否认台军机误射导弹](https://so.toutiao.com/search?keyword=张延廷否认台军机误射导弹)
 1. [华为：期望Mate70带着纯血鸿蒙上市](https://so.toutiao.com/search?keyword=华为：期望Mate70带着纯血鸿蒙上市)
 1. [企业一年被检查65次引争议](https://so.toutiao.com/search?keyword=企业一年被检查65次引争议)
 1. [提灯定损后上饶再被曝拦车收费](https://so.toutiao.com/search?keyword=提灯定损后上饶再被曝拦车收费)
-1. [以军称早先以色列北部的警报是误报](https://so.toutiao.com/search?keyword=以军称早先以色列北部的警报是误报)
 1. [俄乌无人机对撞“同归于尽”](https://so.toutiao.com/search?keyword=俄乌无人机对撞“同归于尽”)
 1. [雷军：我和马斯克都推动了社会进步](https://so.toutiao.com/search?keyword=雷军：我和马斯克都推动了社会进步)
 1. [巴方强烈谴责美国否决巴勒斯坦入联](https://so.toutiao.com/search?keyword=巴方强烈谴责美国否决巴勒斯坦入联)
@@ -85,7 +98,6 @@
 1. [老人给城管下跪 当事人暂停工作](https://so.toutiao.com/search?keyword=老人给城管下跪+当事人暂停工作)
 1. [德黑兰东部发生火灾致6死](https://so.toutiao.com/search?keyword=德黑兰东部发生火灾致6死)
 1. [开封都有什么“家底”](https://so.toutiao.com/search?keyword=开封都有什么“家底”)
-1. [以媒：多架飞往伊朗的航班改道](https://so.toutiao.com/search?keyword=以媒：多架飞往伊朗的航班改道)
 1. [上海城超闭店前天天果园金蝉脱壳](https://so.toutiao.com/search?keyword=上海城超闭店前天天果园金蝉脱壳)
 1. [郭正亮：菲律宾体量小不应再胡闹](https://so.toutiao.com/search?keyword=郭正亮：菲律宾体量小不应再胡闹)
 1. [莫耶斯：我们上半场本该3-0领先](https://so.toutiao.com/search?keyword=莫耶斯：我们上半场本该3-0领先)
@@ -102,7 +114,6 @@
 1. [解放军位中缅边境演习画面公布](https://so.toutiao.com/search?keyword=解放军位中缅边境演习画面公布)
 1. [连风都在偏爱周也](https://so.toutiao.com/search?keyword=连风都在偏爱周也)
 1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [刘畊宏现身周杰伦演唱会](https://so.toutiao.com/search?keyword=刘畊宏现身周杰伦演唱会)
 1. [陈建斌蒋勤勤北影节互动](https://so.toutiao.com/search?keyword=陈建斌蒋勤勤北影节互动)
 1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
 1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
