--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,53 +1,71 @@
 # 2024-04-19
 
-共 258 条
+共 272 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 17:01:01 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 18:00:38 GMT+0800 (China Standard Time) -->
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
 1. [俄军一架战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架战略轰炸机坠毁)
 1. [全国已春播粮食作物面积1.9亿亩](https://so.toutiao.com/search?keyword=全国已春播粮食作物面积1.9亿亩)
-1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
-1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
-1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
-1. [以色列一工人遭滚动钢卷碾压身亡](https://so.toutiao.com/search?keyword=以色列一工人遭滚动钢卷碾压身亡)
-1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
-1. [向12306公众号发疯能求票成功？](https://so.toutiao.com/search?keyword=向12306公众号发疯能求票成功？)
+1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
+1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
 1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
-1. [五一调休考虑过单休的人吗](https://so.toutiao.com/search?keyword=五一调休考虑过单休的人吗)
-1. [为什么说夏天热不热看谷雨](https://so.toutiao.com/search?keyword=为什么说夏天热不热看谷雨)
-1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
+1. [割喉杀妻案凶手称只是轻轻划了几刀](https://so.toutiao.com/search?keyword=割喉杀妻案凶手称只是轻轻划了几刀)
 1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
-1. [湘潭大学回应网传学生偷外卖被毒死](https://so.toutiao.com/search?keyword=湘潭大学回应网传学生偷外卖被毒死)
-1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
-1. [乌称摧毁一架俄军战略轰炸机](https://so.toutiao.com/search?keyword=乌称摧毁一架俄军战略轰炸机)
-1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
-1. [伊朗在伊斯法罕上空拦截约5个目标](https://so.toutiao.com/search?keyword=伊朗在伊斯法罕上空拦截约5个目标)
-1. [媒体：让放假回归休息本位](https://so.toutiao.com/search?keyword=媒体：让放假回归休息本位)
-1. [对话被丈夫家暴割喉女子父母](https://so.toutiao.com/search?keyword=对话被丈夫家暴割喉女子父母)
-1. [陈梦晋级国际乒联单打世界杯四强](https://so.toutiao.com/search?keyword=陈梦晋级国际乒联单打世界杯四强)
+1. [向12306公众号发疯能求票成功？](https://so.toutiao.com/search?keyword=向12306公众号发疯能求票成功？)
+1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
 1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
+1. [开封王婆全国巡演首站江西](https://so.toutiao.com/search?keyword=开封王婆全国巡演首站江西)
+1. [湘潭大学回应网传学生偷外卖被毒死](https://so.toutiao.com/search?keyword=湘潭大学回应网传学生偷外卖被毒死)
+1. [伊朗等国响起爆炸声 以军不予置评](https://so.toutiao.com/search?keyword=伊朗等国响起爆炸声+以军不予置评)
+1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
+1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
+1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [乌称摧毁一架俄军战略轰炸机](https://so.toutiao.com/search?keyword=乌称摧毁一架俄军战略轰炸机)
+1. [为什么说夏天热不热看谷雨](https://so.toutiao.com/search?keyword=为什么说夏天热不热看谷雨)
+1. [伊朗在伊斯法罕上空拦截约5个目标](https://so.toutiao.com/search?keyword=伊朗在伊斯法罕上空拦截约5个目标)
+1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
+1. [美国否决巴勒斯坦入联 外交部回应](https://so.toutiao.com/search?keyword=美国否决巴勒斯坦入联+外交部回应)
+1. [对话被丈夫家暴割喉女子父母](https://so.toutiao.com/search?keyword=对话被丈夫家暴割喉女子父母)
+1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
+1. [以色列一工人遭滚动钢卷碾压身亡](https://so.toutiao.com/search?keyword=以色列一工人遭滚动钢卷碾压身亡)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
+1. [五一调休考虑过单休的人吗](https://so.toutiao.com/search?keyword=五一调休考虑过单休的人吗)
 1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
+1. [报道称以军导弹袭击伊朗 中方回应](https://so.toutiao.com/search?keyword=报道称以军导弹袭击伊朗+中方回应)
+1. [成都一轿车疑似失控致1死](https://so.toutiao.com/search?keyword=成都一轿车疑似失控致1死)
+1. [媒体：让放假回归休息本位](https://so.toutiao.com/search?keyword=媒体：让放假回归休息本位)
+1. [以色列袭击伊朗正值伊最高领袖生日](https://so.toutiao.com/search?keyword=以色列袭击伊朗正值伊最高领袖生日)
 1. [张本兄妹同进世界杯四强](https://so.toutiao.com/search?keyword=张本兄妹同进世界杯四强)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
+1. [是否会与以色列对话？中方回应](https://so.toutiao.com/search?keyword=是否会与以色列对话？中方回应)
+1. [陈梦：没想如何备战半决赛](https://so.toutiao.com/search?keyword=陈梦：没想如何备战半决赛)
+1. [新车未换来信心 理想汽车股价下跌](https://so.toutiao.com/search?keyword=新车未换来信心+理想汽车股价下跌)
+1. [以空军前指挥官：伊朗核设施分布广](https://so.toutiao.com/search?keyword=以空军前指挥官：伊朗核设施分布广)
+1. [公交司机替女出租车司机出头](https://so.toutiao.com/search?keyword=公交司机替女出租车司机出头)
+1. [12306一种新的存钱方式](https://so.toutiao.com/search?keyword=12306一种新的存钱方式)
+1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
+1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
+1. [外交部用三个不接受回应南海仲裁案](https://so.toutiao.com/search?keyword=外交部用三个不接受回应南海仲裁案)
+1. [伊朗防空系统击落数架无人机](https://so.toutiao.com/search?keyword=伊朗防空系统击落数架无人机)
+1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
+1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
+1. [陈梦晋级国际乒联单打世界杯四强](https://so.toutiao.com/search?keyword=陈梦晋级国际乒联单打世界杯四强)
 1. [陈芋汐赛后采访：专注自己](https://so.toutiao.com/search?keyword=陈芋汐赛后采访：专注自己)
-1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
 1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
 1. [爸爸给宝宝换纸尿裤直接干吐了](https://so.toutiao.com/search?keyword=爸爸给宝宝换纸尿裤直接干吐了)
-1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
-1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
 1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [叙利亚称南部防空设施遭以色列袭击](https://so.toutiao.com/search?keyword=叙利亚称南部防空设施遭以色列袭击)
-1. [外交部用三个不接受回应南海仲裁案](https://so.toutiao.com/search?keyword=外交部用三个不接受回应南海仲裁案)
-1. [公交司机替女出租车司机出头](https://so.toutiao.com/search?keyword=公交司机替女出租车司机出头)
-1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
 1. [金价要见顶了吗](https://so.toutiao.com/search?keyword=金价要见顶了吗)
 1. [俄军坦克用炮射导弹摧毁乌军弹药库](https://so.toutiao.com/search?keyword=俄军坦克用炮射导弹摧毁乌军弹药库)
 1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
 1. [五一不调休可行吗](https://so.toutiao.com/search?keyword=五一不调休可行吗)
 1. [舒淇冯德伦庆结婚纪念日](https://so.toutiao.com/search?keyword=舒淇冯德伦庆结婚纪念日)
-1. [以色列袭击伊朗正值伊最高领袖生日](https://so.toutiao.com/search?keyword=以色列袭击伊朗正值伊最高领袖生日)
 1. [男子欠屠宰场40万成员工打工还债](https://so.toutiao.com/search?keyword=男子欠屠宰场40万成员工打工还债)
 1. [伊朗防空系统已在多省份上空启动](https://so.toutiao.com/search?keyword=伊朗防空系统已在多省份上空启动)
 1. [专家：以色列行动或体现对等报复](https://so.toutiao.com/search?keyword=专家：以色列行动或体现对等报复)
@@ -57,7 +75,6 @@
 1. [谷雨时节 抢抓农时](https://so.toutiao.com/search?keyword=谷雨时节+抢抓农时)
 1. [以色列反击伊朗的目的是什么](https://so.toutiao.com/search?keyword=以色列反击伊朗的目的是什么)
 1. [伊朗媒体：未收到空袭造成爆炸报告](https://so.toutiao.com/search?keyword=伊朗媒体：未收到空袭造成爆炸报告)
-1. [开封王婆全国巡演首站江西](https://so.toutiao.com/search?keyword=开封王婆全国巡演首站江西)
 1. [律师解读开宝马撞人男子被执行死刑](https://so.toutiao.com/search?keyword=律师解读开宝马撞人男子被执行死刑)
 1. [董宇辉亮相北京国际电影节](https://so.toutiao.com/search?keyword=董宇辉亮相北京国际电影节)
 1. [专家解读以色列反击伊朗](https://so.toutiao.com/search?keyword=专家解读以色列反击伊朗)
@@ -74,7 +91,6 @@
 1. [刘亦菲裙子好像钢丝球开花](https://so.toutiao.com/search?keyword=刘亦菲裙子好像钢丝球开花)
 1. [以媒：多架飞往伊朗的航班改道](https://so.toutiao.com/search?keyword=以媒：多架飞往伊朗的航班改道)
 1. [深圳城管入户执法？官方回应](https://so.toutiao.com/search?keyword=深圳城管入户执法？官方回应)
-1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
 1. [黄金和美元为何同涨](https://so.toutiao.com/search?keyword=黄金和美元为何同涨)
 1. [老人常到妻子安葬地静坐](https://so.toutiao.com/search?keyword=老人常到妻子安葬地静坐)
 1. [“王婆”变“李婆” 万岁山还火吗](https://so.toutiao.com/search?keyword=“王婆”变“李婆”+万岁山还火吗)
@@ -87,7 +103,6 @@
 1. [台学者：美国警惕赖清德政策路线](https://so.toutiao.com/search?keyword=台学者：美国警惕赖清德政策路线)
 1. [媒体专访《承欢记》导演](https://so.toutiao.com/search?keyword=媒体专访《承欢记》导演)
 1. [美官员：以打击目标不含伊朗核设施](https://so.toutiao.com/search?keyword=美官员：以打击目标不含伊朗核设施)
-1. [伊朗防空系统击落数架无人机](https://so.toutiao.com/search?keyword=伊朗防空系统击落数架无人机)
 1. [赤膊男子扛升降杆街头乱晃见车就砸](https://so.toutiao.com/search?keyword=赤膊男子扛升降杆街头乱晃见车就砸)
 1. [俄军一架图-22M3战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架图-22M3战略轰炸机坠毁)
 1. [美媒：以方提前通知美国将实施报复](https://so.toutiao.com/search?keyword=美媒：以方提前通知美国将实施报复)
@@ -116,7 +131,6 @@
 1. [蒋勤勤北京电影节摔倒后报平安](https://so.toutiao.com/search?keyword=蒋勤勤北京电影节摔倒后报平安)
 1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
 1. [钓鱼人遇冰雹撑伞淡定垂钓](https://so.toutiao.com/search?keyword=钓鱼人遇冰雹撑伞淡定垂钓)
-1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
 1. [媒体：两岸能否春暖花开要看赖清德](https://so.toutiao.com/search?keyword=媒体：两岸能否春暖花开要看赖清德)
 1. [曝美国就中国电动汽车向墨西哥施压](https://so.toutiao.com/search?keyword=曝美国就中国电动汽车向墨西哥施压)
 1. [00后街头表演功夫“飞饼”](https://so.toutiao.com/search?keyword=00后街头表演功夫“飞饼”)
