--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,54 +1,70 @@
 # 2024-04-19
 
-共 296 条
+共 309 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 20:09:27 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 21:01:56 GMT+0800 (China Standard Time) -->
 1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
 1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
 1. [全国已春播粮食作物面积1.9亿亩](https://so.toutiao.com/search?keyword=全国已春播粮食作物面积1.9亿亩)
-1. [俄军一架战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架战略轰炸机坠毁)
+1. [女子去拿热水壶 老公察觉立马弹起](https://so.toutiao.com/search?keyword=女子去拿热水壶+老公察觉立马弹起)
+1. [信息支援部队是全新打造的战略性兵种](https://so.toutiao.com/search?keyword=信息支援部队是全新打造的战略性兵种)
 1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
 1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
-1. [广东清远暴雨时现“绿色天空”](https://so.toutiao.com/search?keyword=广东清远暴雨时现“绿色天空”)
-1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
-1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
-1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [河北承德多车相撞 殡葬所：已致8死](https://so.toutiao.com/search?keyword=河北承德多车相撞+殡葬所：已致8死)
 1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
-1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
 1. [男生被同学反锁宿舍群殴](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴)
+1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
+1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
+1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
 1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
 1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
-1. [女子去拿热水壶 老公察觉立马弹起](https://so.toutiao.com/search?keyword=女子去拿热水壶+老公察觉立马弹起)
-1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
-1. [菲律宾要中国反思 外交部驳斥](https://so.toutiao.com/search?keyword=菲律宾要中国反思+外交部驳斥)
-1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
+1. [5名日本人所乘车辆在巴基斯坦遇袭](https://so.toutiao.com/search?keyword=5名日本人所乘车辆在巴基斯坦遇袭)
 1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
-1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
-1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
-1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
-1. [为什么说夏天热不热看谷雨](https://so.toutiao.com/search?keyword=为什么说夏天热不热看谷雨)
-1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
-1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
-1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [贵州毕节果农血橙被冰雹砸落满地](https://so.toutiao.com/search?keyword=贵州毕节果农血橙被冰雹砸落满地)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
+1. [广东清远暴雨时现“绿色天空”](https://so.toutiao.com/search?keyword=广东清远暴雨时现“绿色天空”)
+1. [俄军一架战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架战略轰炸机坠毁)
+1. [菲律宾要中国反思 外交部驳斥](https://so.toutiao.com/search?keyword=菲律宾要中国反思+外交部驳斥)
+1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
+1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
+1. [专家建议释放农民工消费潜力](https://so.toutiao.com/search?keyword=专家建议释放农民工消费潜力)
+1. [为什么说夏天热不热看谷雨](https://so.toutiao.com/search?keyword=为什么说夏天热不热看谷雨)
+1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
+1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
+1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [国内液化天然气价格集中上涨](https://so.toutiao.com/search?keyword=国内液化天然气价格集中上涨)
+1. [烟台舰“返乡”开展军民共建活动](https://so.toutiao.com/search?keyword=烟台舰“返乡”开展军民共建活动)
+1. [周鸿祎被车企大佬宠到眼花缭乱](https://so.toutiao.com/search?keyword=周鸿祎被车企大佬宠到眼花缭乱)
+1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
+1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
+1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
+1. [《哈尔滨一九四四》预约人数破百万](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》预约人数破百万)
+1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
+1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
+1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
+1. [辅警盗刷在押嫌疑人23.5万](https://so.toutiao.com/search?keyword=辅警盗刷在押嫌疑人23.5万)
+1. [大熊猫华丽雨中啃冲天炮大笋](https://so.toutiao.com/search?keyword=大熊猫华丽雨中啃冲天炮大笋)
+1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
+1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
+1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
+1. [中国驻伊朗大使馆发布安全提醒](https://so.toutiao.com/search?keyword=中国驻伊朗大使馆发布安全提醒)
+1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
+1. [波兰一男子涉嫌参与暗杀乌总统被捕](https://so.toutiao.com/search?keyword=波兰一男子涉嫌参与暗杀乌总统被捕)
+1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
+1. [警方再通报男子骚扰女孩还打家长](https://so.toutiao.com/search?keyword=警方再通报男子骚扰女孩还打家长)
+1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [以色列一工人遭滚动钢卷碾压身亡](https://so.toutiao.com/search?keyword=以色列一工人遭滚动钢卷碾压身亡)
 1. [消防展示油锅起火切忌水浇道理翻车](https://so.toutiao.com/search?keyword=消防展示油锅起火切忌水浇道理翻车)
-1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
 1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [湘潭大学回应网传学生偷外卖被毒死](https://so.toutiao.com/search?keyword=湘潭大学回应网传学生偷外卖被毒死)
-1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
 1. [割喉杀妻案凶手称只是轻轻划了几刀](https://so.toutiao.com/search?keyword=割喉杀妻案凶手称只是轻轻划了几刀)
-1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
 1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
-1. [周鸿祎被车企大佬宠到眼花缭乱](https://so.toutiao.com/search?keyword=周鸿祎被车企大佬宠到眼花缭乱)
-1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
-1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
 1. [安徽一辅警盗刷在押嫌疑人23.5万元](https://so.toutiao.com/search?keyword=安徽一辅警盗刷在押嫌疑人23.5万元)
 1. [伊朗媒体：伊朗核设施未受损](https://so.toutiao.com/search?keyword=伊朗媒体：伊朗核设施未受损)
-1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
 1. [外交部用三个不接受回应南海仲裁案](https://so.toutiao.com/search?keyword=外交部用三个不接受回应南海仲裁案)
-1. [中国驻伊朗大使馆发布安全提醒](https://so.toutiao.com/search?keyword=中国驻伊朗大使馆发布安全提醒)
 1. [一季度我国GDP同比增长5.3%](https://so.toutiao.com/search?keyword=一季度我国GDP同比增长5.3%)
 1. [央行：坚决防范汇率超调风险](https://so.toutiao.com/search?keyword=央行：坚决防范汇率超调风险)
 1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
@@ -64,7 +80,6 @@
 1. [伊朗在伊斯法罕上空拦截约5个目标](https://so.toutiao.com/search?keyword=伊朗在伊斯法罕上空拦截约5个目标)
 1. [伊朗防空系统已在多省份上空启动](https://so.toutiao.com/search?keyword=伊朗防空系统已在多省份上空启动)
 1. [美国否决巴勒斯坦入联 外交部回应](https://so.toutiao.com/search?keyword=美国否决巴勒斯坦入联+外交部回应)
-1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
 1. [郭正亮：菲律宾体量小不应再胡闹](https://so.toutiao.com/search?keyword=郭正亮：菲律宾体量小不应再胡闹)
 1. [河南省安阳市政协副主席雷鸣被查](https://so.toutiao.com/search?keyword=河南省安阳市政协副主席雷鸣被查)
 1. [伊朗等国响起爆炸声 以军不予置评](https://so.toutiao.com/search?keyword=伊朗等国响起爆炸声+以军不予置评)
@@ -80,7 +95,6 @@
 1. [以空军前指挥官：伊朗核设施分布广](https://so.toutiao.com/search?keyword=以空军前指挥官：伊朗核设施分布广)
 1. [公交司机替女出租车司机出头](https://so.toutiao.com/search?keyword=公交司机替女出租车司机出头)
 1. [12306一种新的存钱方式](https://so.toutiao.com/search?keyword=12306一种新的存钱方式)
-1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
 1. [伊朗防空系统击落数架无人机](https://so.toutiao.com/search?keyword=伊朗防空系统击落数架无人机)
 1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [陈梦晋级国际乒联单打世界杯四强](https://so.toutiao.com/search?keyword=陈梦晋级国际乒联单打世界杯四强)
@@ -97,7 +111,6 @@
 1. [专家：以色列行动或体现对等报复](https://so.toutiao.com/search?keyword=专家：以色列行动或体现对等报复)
 1. [马龙晋级国际乒联单打世界杯四强](https://so.toutiao.com/search?keyword=马龙晋级国际乒联单打世界杯四强)
 1. [以军称早先以色列北部的警报是误报](https://so.toutiao.com/search?keyword=以军称早先以色列北部的警报是误报)
-1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
 1. [谷雨时节 抢抓农时](https://so.toutiao.com/search?keyword=谷雨时节+抢抓农时)
 1. [以色列反击伊朗的目的是什么](https://so.toutiao.com/search?keyword=以色列反击伊朗的目的是什么)
 1. [伊朗媒体：未收到空袭造成爆炸报告](https://so.toutiao.com/search?keyword=伊朗媒体：未收到空袭造成爆炸报告)
