--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,54 +1,72 @@
 # 2024-04-19
 
-共 309 条
+共 324 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 21:01:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 22:00:51 GMT+0800 (China Standard Time) -->
 1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
 1. [在伊朗中国留学生谈以色列空袭伊朗](https://so.toutiao.com/search?keyword=在伊朗中国留学生谈以色列空袭伊朗)
-1. [全国已春播粮食作物面积1.9亿亩](https://so.toutiao.com/search?keyword=全国已春播粮食作物面积1.9亿亩)
-1. [女子去拿热水壶 老公察觉立马弹起](https://so.toutiao.com/search?keyword=女子去拿热水壶+老公察觉立马弹起)
+1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
 1. [信息支援部队是全新打造的战略性兵种](https://so.toutiao.com/search?keyword=信息支援部队是全新打造的战略性兵种)
-1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
-1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
-1. [河北承德多车相撞 殡葬所：已致8死](https://so.toutiao.com/search?keyword=河北承德多车相撞+殡葬所：已致8死)
 1. [直击伊朗以色列多地实况](https://so.toutiao.com/search?keyword=直击伊朗以色列多地实况)
-1. [男生被同学反锁宿舍群殴](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴)
+1. [女子去拿热水壶 老公察觉立马弹起](https://so.toutiao.com/search?keyword=女子去拿热水壶+老公察觉立马弹起)
+1. [毕毅任解放军信息支援部队司令员](https://so.toutiao.com/search?keyword=毕毅任解放军信息支援部队司令员)
+1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
+1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
+1. [证监会：调降基金股票交易佣金费率](https://so.toutiao.com/search?keyword=证监会：调降基金股票交易佣金费率)
+1. [以色列开始反击伊朗 地点有何讲究](https://so.toutiao.com/search?keyword=以色列开始反击伊朗+地点有何讲究)
 1. [伊朗：已告知美国 不寻求事态升级](https://so.toutiao.com/search?keyword=伊朗：已告知美国+不寻求事态升级)
-1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
-1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
-1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
-1. [5名日本人所乘车辆在巴基斯坦遇袭](https://so.toutiao.com/search?keyword=5名日本人所乘车辆在巴基斯坦遇袭)
-1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
-1. [贵州毕节果农血橙被冰雹砸落满地](https://so.toutiao.com/search?keyword=贵州毕节果农血橙被冰雹砸落满地)
 1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
-1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
-1. [广东清远暴雨时现“绿色天空”](https://so.toutiao.com/search?keyword=广东清远暴雨时现“绿色天空”)
+1. [官方辟谣“单次住院不能超过15天”](https://so.toutiao.com/search?keyword=官方辟谣“单次住院不能超过15天”)
+1. [以导弹击中伊朗境内目标画面曝光](https://so.toutiao.com/search?keyword=以导弹击中伊朗境内目标画面曝光)
+1. [专家建议释放农民工消费潜力](https://so.toutiao.com/search?keyword=专家建议释放农民工消费潜力)
+1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
+1. [三名乌士兵越过第聂伯河向俄军投降](https://so.toutiao.com/search?keyword=三名乌士兵越过第聂伯河向俄军投降)
+1. [解放军形成新型军兵种结构布局](https://so.toutiao.com/search?keyword=解放军形成新型军兵种结构布局)
+1. [五菱宏光回应被周鸿祎说空间小](https://so.toutiao.com/search?keyword=五菱宏光回应被周鸿祎说空间小)
+1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
+1. [河北承德多车相撞 殡葬所：已致8死](https://so.toutiao.com/search?keyword=河北承德多车相撞+殡葬所：已致8死)
+1. [实测华为Pura70系列游戏能力](https://so.toutiao.com/search?keyword=实测华为Pura70系列游戏能力)
+1. [约旦警告以色列报复伊朗后果](https://so.toutiao.com/search?keyword=约旦警告以色列报复伊朗后果)
 1. [俄军一架战略轰炸机坠毁](https://so.toutiao.com/search?keyword=俄军一架战略轰炸机坠毁)
+1. [男生被同学反锁宿舍群殴](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴)
+1. [周鸿祎回应车企们的热情自荐](https://so.toutiao.com/search?keyword=周鸿祎回应车企们的热情自荐)
+1. [专家：美又一次站在国际社会对立面](https://so.toutiao.com/search?keyword=专家：美又一次站在国际社会对立面)
+1. [贵州毕节果农血橙被冰雹砸落满地](https://so.toutiao.com/search?keyword=贵州毕节果农血橙被冰雹砸落满地)
+1. [媒体评打人男子叫嚣是镇书记儿子](https://so.toutiao.com/search?keyword=媒体评打人男子叫嚣是镇书记儿子)
+1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
+1. [男子为妻治癌花光积蓄？街道办回应](https://so.toutiao.com/search?keyword=男子为妻治癌花光积蓄？街道办回应)
+1. [国内液化天然气价格集中上涨](https://so.toutiao.com/search?keyword=国内液化天然气价格集中上涨)
+1. [《哈尔滨一九四四》预约人数破百万](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》预约人数破百万)
+1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
+1. [全红婵注意力全在吉祥物上](https://so.toutiao.com/search?keyword=全红婵注意力全在吉祥物上)
+1. [越野车驶入麦田来回碾压](https://so.toutiao.com/search?keyword=越野车驶入麦田来回碾压)
+1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
+1. [跳水世界杯混合团体决赛中国队摘金](https://so.toutiao.com/search?keyword=跳水世界杯混合团体决赛中国队摘金)
+1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
+1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
+1. [广东清远暴雨时现“绿色天空”](https://so.toutiao.com/search?keyword=广东清远暴雨时现“绿色天空”)
+1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
+1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
+1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
+1. [5名日本人所乘车辆在巴基斯坦遇袭](https://so.toutiao.com/search?keyword=5名日本人所乘车辆在巴基斯坦遇袭)
+1. [对话被丈夫家暴割喉女子父母](https://so.toutiao.com/search?keyword=对话被丈夫家暴割喉女子父母)
+1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
+1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
+1. [全国已春播粮食作物面积1.9亿亩](https://so.toutiao.com/search?keyword=全国已春播粮食作物面积1.9亿亩)
 1. [菲律宾要中国反思 外交部驳斥](https://so.toutiao.com/search?keyword=菲律宾要中国反思+外交部驳斥)
 1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
-1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
-1. [女子看周杰伦演唱会迟到崩溃大哭](https://so.toutiao.com/search?keyword=女子看周杰伦演唱会迟到崩溃大哭)
-1. [专家建议释放农民工消费潜力](https://so.toutiao.com/search?keyword=专家建议释放农民工消费潜力)
 1. [为什么说夏天热不热看谷雨](https://so.toutiao.com/search?keyword=为什么说夏天热不热看谷雨)
-1. [机构：华为Pura70今年出货或超千万部](https://so.toutiao.com/search?keyword=机构：华为Pura70今年出货或超千万部)
-1. [周深在联合国总部献唱](https://so.toutiao.com/search?keyword=周深在联合国总部献唱)
-1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
-1. [国内液化天然气价格集中上涨](https://so.toutiao.com/search?keyword=国内液化天然气价格集中上涨)
 1. [烟台舰“返乡”开展军民共建活动](https://so.toutiao.com/search?keyword=烟台舰“返乡”开展军民共建活动)
 1. [周鸿祎被车企大佬宠到眼花缭乱](https://so.toutiao.com/search?keyword=周鸿祎被车企大佬宠到眼花缭乱)
-1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
 1. [阿姨想用中铺换下铺 全程礼貌询问](https://so.toutiao.com/search?keyword=阿姨想用中铺换下铺+全程礼貌询问)
 1. [多国驻联合国代表在以方发言前离席](https://so.toutiao.com/search?keyword=多国驻联合国代表在以方发言前离席)
-1. [《哈尔滨一九四四》预约人数破百万](https://so.toutiao.com/search?keyword=《哈尔滨一九四四》预约人数破百万)
-1. [麒麟9010跑分出炉](https://so.toutiao.com/search?keyword=麒麟9010跑分出炉)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
 1. [伊朗革命卫队所有基地最高级别战备](https://so.toutiao.com/search?keyword=伊朗革命卫队所有基地最高级别战备)
 1. [辅警盗刷在押嫌疑人23.5万](https://so.toutiao.com/search?keyword=辅警盗刷在押嫌疑人23.5万)
 1. [大熊猫华丽雨中啃冲天炮大笋](https://so.toutiao.com/search?keyword=大熊猫华丽雨中啃冲天炮大笋)
 1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
-1. [女子停车堵路警察劝离无果](https://so.toutiao.com/search?keyword=女子停车堵路警察劝离无果)
 1. [智障男子被当劫犯关9年 再审改判无罪](https://so.toutiao.com/search?keyword=智障男子被当劫犯关9年+再审改判无罪)
 1. [中国驻伊朗大使馆发布安全提醒](https://so.toutiao.com/search?keyword=中国驻伊朗大使馆发布安全提醒)
 1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
@@ -58,7 +76,6 @@
 1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [以色列一工人遭滚动钢卷碾压身亡](https://so.toutiao.com/search?keyword=以色列一工人遭滚动钢卷碾压身亡)
 1. [消防展示油锅起火切忌水浇道理翻车](https://so.toutiao.com/search?keyword=消防展示油锅起火切忌水浇道理翻车)
-1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [湘潭大学回应网传学生偷外卖被毒死](https://so.toutiao.com/search?keyword=湘潭大学回应网传学生偷外卖被毒死)
 1. [割喉杀妻案凶手称只是轻轻划了几刀](https://so.toutiao.com/search?keyword=割喉杀妻案凶手称只是轻轻划了几刀)
 1. [阿根廷正式申请加入北约全球伙伴](https://so.toutiao.com/search?keyword=阿根廷正式申请加入北约全球伙伴)
@@ -73,7 +90,6 @@
 1. [向12306公众号发疯能求票成功？](https://so.toutiao.com/search?keyword=向12306公众号发疯能求票成功？)
 1. [开封王婆全国巡演首站江西](https://so.toutiao.com/search?keyword=开封王婆全国巡演首站江西)
 1. [台年轻人：盼赖清德搞好两岸关系](https://so.toutiao.com/search?keyword=台年轻人：盼赖清德搞好两岸关系)
-1. [对话被丈夫家暴割喉女子父母](https://so.toutiao.com/search?keyword=对话被丈夫家暴割喉女子父母)
 1. [女老师教导小学生烟卡危害](https://so.toutiao.com/search?keyword=女老师教导小学生烟卡危害)
 1. [乌称摧毁一架俄军战略轰炸机](https://so.toutiao.com/search?keyword=乌称摧毁一架俄军战略轰炸机)
 1. [广东省广宁县暴雨致黄泥水浸街](https://so.toutiao.com/search?keyword=广东省广宁县暴雨致黄泥水浸街)
@@ -99,7 +115,6 @@
 1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [陈梦晋级国际乒联单打世界杯四强](https://so.toutiao.com/search?keyword=陈梦晋级国际乒联单打世界杯四强)
 1. [陈芋汐赛后采访：专注自己](https://so.toutiao.com/search?keyword=陈芋汐赛后采访：专注自己)
-1. [三部门要求商家储备现金意味着什么](https://so.toutiao.com/search?keyword=三部门要求商家储备现金意味着什么)
 1. [爸爸给宝宝换纸尿裤直接干吐了](https://so.toutiao.com/search?keyword=爸爸给宝宝换纸尿裤直接干吐了)
 1. [叙利亚称南部防空设施遭以色列袭击](https://so.toutiao.com/search?keyword=叙利亚称南部防空设施遭以色列袭击)
 1. [金价要见顶了吗](https://so.toutiao.com/search?keyword=金价要见顶了吗)
