--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,56 +1,80 @@
 # 2024-04-20
 
-共 186 条
+共 207 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 13:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 20 2024 14:00:40 GMT+0800 (China Standard Time) -->
+1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
 1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
-1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
 1. [广交会涌现外贸新动能](https://so.toutiao.com/search?keyword=广交会涌现外贸新动能)
+1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
 1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
-1. [加沙妇女抱5岁侄女尸体照片获摄影奖](https://so.toutiao.com/search?keyword=加沙妇女抱5岁侄女尸体照片获摄影奖)
 1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
-1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
 1. [英伟达重挫10%](https://so.toutiao.com/search?keyword=英伟达重挫10%)
-1. [新任海军新闻发言人冷国伟首次亮相](https://so.toutiao.com/search?keyword=新任海军新闻发言人冷国伟首次亮相)
-1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
+1. [狗妈妈路上巧遇孩子激动不已](https://so.toutiao.com/search?keyword=狗妈妈路上巧遇孩子激动不已)
+1. [女生遇一“坨”胖狗 体重180斤左右](https://so.toutiao.com/search?keyword=女生遇一“坨”胖狗+体重180斤左右)
+1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
+1. [曝以发射3枚导弹“有限打击”伊朗](https://so.toutiao.com/search?keyword=曝以发射3枚导弹“有限打击”伊朗)
 1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
 1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
 1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
-1. [女生遇一“坨”胖狗 体重180斤左右](https://so.toutiao.com/search?keyword=女生遇一“坨”胖狗+体重180斤左右)
+1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
 1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
 1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
-1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
+1. [大妈排队领鸡蛋遭大爷摸臀猥亵](https://so.toutiao.com/search?keyword=大妈排队领鸡蛋遭大爷摸臀猥亵)
+1. [江西婺源通报“拦车收费”](https://so.toutiao.com/search?keyword=江西婺源通报“拦车收费”)
+1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
+1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
+1. [入联遭美一票否决后巴方代表发声](https://so.toutiao.com/search?keyword=入联遭美一票否决后巴方代表发声)
+1. [孩子在家门口玩耍遭毒蛇咬伤](https://so.toutiao.com/search?keyword=孩子在家门口玩耍遭毒蛇咬伤)
+1. [苗苗浪姐初舞台再跳《绒花》](https://so.toutiao.com/search?keyword=苗苗浪姐初舞台再跳《绒花》)
+1. [俄外长：不会允许乌变北约势力范围](https://so.toutiao.com/search?keyword=俄外长：不会允许乌变北约势力范围)
+1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
+1. [警方通报河北两车相撞致8死1伤](https://so.toutiao.com/search?keyword=警方通报河北两车相撞致8死1伤)
+1. [英格拉姆不知道CJ给全队发了短信](https://so.toutiao.com/search?keyword=英格拉姆不知道CJ给全队发了短信)
+1. [价值12万的自行车上路被撞](https://so.toutiao.com/search?keyword=价值12万的自行车上路被撞)
+1. [深度体验极氪009光辉版](https://so.toutiao.com/search?keyword=深度体验极氪009光辉版)
+1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
+1. [TVB黄金配角陈狄克出殡](https://so.toutiao.com/search?keyword=TVB黄金配角陈狄克出殡)
+1. [林志颖现场观战F1为周冠宇助威](https://so.toutiao.com/search?keyword=林志颖现场观战F1为周冠宇助威)
+1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
+1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
+1. [成都一轿车疑似失控致1死](https://so.toutiao.com/search?keyword=成都一轿车疑似失控致1死)
+1. [海军在青岛召开媒体吹风会](https://so.toutiao.com/search?keyword=海军在青岛召开媒体吹风会)
+1. [住房以旧换新大规模推行难在哪](https://so.toutiao.com/search?keyword=住房以旧换新大规模推行难在哪)
+1. [盗窃团伙从湖南一路偷到贵州被抓](https://so.toutiao.com/search?keyword=盗窃团伙从湖南一路偷到贵州被抓)
+1. [巴方向投赞成票的安理会成员国致敬](https://so.toutiao.com/search?keyword=巴方向投赞成票的安理会成员国致敬)
+1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
+1. [许永锞任广西壮族自治区常务副主席](https://so.toutiao.com/search?keyword=许永锞任广西壮族自治区常务副主席)
+1. [周鸿祎公布6条选车标准](https://so.toutiao.com/search?keyword=周鸿祎公布6条选车标准)
+1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
+1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
+1. [章子怡章泽天同框站C位](https://so.toutiao.com/search?keyword=章子怡章泽天同框站C位)
+1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
+1. [要求10岁女孩带路男子已找到](https://so.toutiao.com/search?keyword=要求10岁女孩带路男子已找到)
+1. [日元贬值 海外游客涌入日本扫货](https://so.toutiao.com/search?keyword=日元贬值+海外游客涌入日本扫货)
+1. [NBA季后赛首轮：去年东西决续集](https://so.toutiao.com/search?keyword=NBA季后赛首轮：去年东西决续集)
+1. [加沙妇女抱5岁侄女尸体照片获摄影奖](https://so.toutiao.com/search?keyword=加沙妇女抱5岁侄女尸体照片获摄影奖)
+1. [新任海军新闻发言人冷国伟首次亮相](https://so.toutiao.com/search?keyword=新任海军新闻发言人冷国伟首次亮相)
 1. [鹈鹕淘汰国王晋级季后赛](https://so.toutiao.com/search?keyword=鹈鹕淘汰国王晋级季后赛)
 1. [多地小龙虾身价下跌](https://so.toutiao.com/search?keyword=多地小龙虾身价下跌)
-1. [重庆通报燃气费多计多收问题](https://so.toutiao.com/search?keyword=重庆通报燃气费多计多收问题)
-1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
-1. [周鸿祎公布6条选车标准](https://so.toutiao.com/search?keyword=周鸿祎公布6条选车标准)
 1. [厦门舰厦门见](https://so.toutiao.com/search?keyword=厦门舰厦门见)
 1. [媒体：上海男篮还是太“年轻”了](https://so.toutiao.com/search?keyword=媒体：上海男篮还是太“年轻”了)
 1. [记者：国奥发挥略高于正常水准](https://so.toutiao.com/search?keyword=记者：国奥发挥略高于正常水准)
-1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
 1. [广东将防汛IV级应急响应提升至Ⅲ级](https://so.toutiao.com/search?keyword=广东将防汛IV级应急响应提升至Ⅲ级)
-1. [解放军信息支援部队成立](https://so.toutiao.com/search?keyword=解放军信息支援部队成立)
 1. [纪委工作人员酒驾被查？官方通报](https://so.toutiao.com/search?keyword=纪委工作人员酒驾被查？官方通报)
 1. [CIA局长：若无军援乌军今年或战败](https://so.toutiao.com/search?keyword=CIA局长：若无军援乌军今年或战败)
 1. [以色列是面子的报复还是里子的攻击](https://so.toutiao.com/search?keyword=以色列是面子的报复还是里子的攻击)
 1. [上海地铁试点闸机常开门](https://so.toutiao.com/search?keyword=上海地铁试点闸机常开门)
-1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
 1. [伊万科维奇考察国奥并非一无所获](https://so.toutiao.com/search?keyword=伊万科维奇考察国奥并非一无所获)
 1. [原解放军总医院院长刘轩亭逝世](https://so.toutiao.com/search?keyword=原解放军总医院院长刘轩亭逝世)
 1. [官方否认骚扰女孩男子是镇书记儿子](https://so.toutiao.com/search?keyword=官方否认骚扰女孩男子是镇书记儿子)
 1. [大陆调整航线触动台当局敏感神经](https://so.toutiao.com/search?keyword=大陆调整航线触动台当局敏感神经)
-1. [巴方向投赞成票的安理会成员国致敬](https://so.toutiao.com/search?keyword=巴方向投赞成票的安理会成员国致敬)
 1. [中国国奥2连败出局无缘前往巴黎](https://so.toutiao.com/search?keyword=中国国奥2连败出局无缘前往巴黎)
-1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
 1. [曝特斯拉中国有部门裁员50%](https://so.toutiao.com/search?keyword=曝特斯拉中国有部门裁员50%)
 1. [哈尔滨啤酒检出的呕吐毒素是什么](https://so.toutiao.com/search?keyword=哈尔滨啤酒检出的呕吐毒素是什么)
-1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
 1. [高圆圆赞胡歌是一个非常好的人](https://so.toutiao.com/search?keyword=高圆圆赞胡歌是一个非常好的人)
 1. [儿子打工十几年没回家 老人急寻](https://so.toutiao.com/search?keyword=儿子打工十几年没回家+老人急寻)
-1. [专家：伊以恐陷入没有尽头的报复螺旋](https://so.toutiao.com/search?keyword=专家：伊以恐陷入没有尽头的报复螺旋)
 1. [《万春逗笑社》聚焦传统相声行业](https://so.toutiao.com/search?keyword=《万春逗笑社》聚焦传统相声行业)
 1. [已有近50城取消首套房贷利率下限](https://so.toutiao.com/search?keyword=已有近50城取消首套房贷利率下限)
 1. [34岁纳乔已效力皇马23年](https://so.toutiao.com/search?keyword=34岁纳乔已效力皇马23年)
@@ -60,12 +84,10 @@
 1. [约旦：不允许中东成为伊以冲突场所](https://so.toutiao.com/search?keyword=约旦：不允许中东成为伊以冲突场所)
 1. [氯雷他定能长期服用吗](https://so.toutiao.com/search?keyword=氯雷他定能长期服用吗)
 1. [曝以袭伊朗前曾告知美方 美不支持](https://so.toutiao.com/search?keyword=曝以袭伊朗前曾告知美方+美不支持)
-1. [成都一轿车疑似失控致1死](https://so.toutiao.com/search?keyword=成都一轿车疑似失控致1死)
 1. [大妈摆摊遇城管 直接将饼发给路人](https://so.toutiao.com/search?keyword=大妈摆摊遇城管+直接将饼发给路人)
 1. [男子地摊吃饭要求开发票还少给钱](https://so.toutiao.com/search?keyword=男子地摊吃饭要求开发票还少给钱)
 1. [山东化工厂爆炸致10死 5人被追责](https://so.toutiao.com/search?keyword=山东化工厂爆炸致10死+5人被追责)
 1. [伊朗军方：击落可疑飞行物致爆炸](https://so.toutiao.com/search?keyword=伊朗军方：击落可疑飞行物致爆炸)
-1. [《奔跑吧》刘涛灵魂拷问沙溢](https://so.toutiao.com/search?keyword=《奔跑吧》刘涛灵魂拷问沙溢)
 1. [山西：当一号旅游公路迎来古代诗人](https://so.toutiao.com/search?keyword=山西：当一号旅游公路迎来古代诗人)
 1. [黄金和美元为何同涨](https://so.toutiao.com/search?keyword=黄金和美元为何同涨)
 1. [极氪009光辉版正式上市](https://so.toutiao.com/search?keyword=极氪009光辉版正式上市)
@@ -83,7 +105,6 @@
 1. [媒体：这条航线为何能让台当局跳脚](https://so.toutiao.com/search?keyword=媒体：这条航线为何能让台当局跳脚)
 1. [乘风2024初舞台排名前十揭晓](https://so.toutiao.com/search?keyword=乘风2024初舞台排名前十揭晓)
 1. [摩根士丹利：理想L6未带来惊喜](https://so.toutiao.com/search?keyword=摩根士丹利：理想L6未带来惊喜)
-1. [媒体人：周冠宇不太可能成为巨星](https://so.toutiao.com/search?keyword=媒体人：周冠宇不太可能成为巨星)
 1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
 1. [2024春天田野里的新故事](https://so.toutiao.com/search?keyword=2024春天田野里的新故事)
 1. [男生被同学反锁宿舍群殴 4人被刑拘](https://so.toutiao.com/search?keyword=男生被同学反锁宿舍群殴+4人被刑拘)
