--- a/archives/toutiao-search/2024-04-20.md
+++ b/archives/toutiao-search/2024-04-20.md
@@ -1,52 +1,69 @@
 # 2024-04-20
 
-共 251 条
+共 265 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 20 2024 17:00:59 GMT+0800 (China Standard Time) -->
-1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
+<!-- 最后更新时间 Sat Apr 20 2024 18:00:37 GMT+0800 (China Standard Time) -->
+1. [韩国人在泰抢劫被抓后竟称是中国人](https://so.toutiao.com/search?keyword=韩国人在泰抢劫被抓后竟称是中国人)
 1. [女子桥边哭泣留下手机后跳桥](https://so.toutiao.com/search?keyword=女子桥边哭泣留下手机后跳桥)
 1. [我国载重最大货运列车今将开行](https://so.toutiao.com/search?keyword=我国载重最大货运列车今将开行)
-1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
-1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
 1. [准新娘自杀身亡 订婚彩礼仅返还18万](https://so.toutiao.com/search?keyword=准新娘自杀身亡+订婚彩礼仅返还18万)
-1. [陈佩斯倪萍40年好友再相聚](https://so.toutiao.com/search?keyword=陈佩斯倪萍40年好友再相聚)
-1. [俄外长：不会允许乌变北约势力范围](https://so.toutiao.com/search?keyword=俄外长：不会允许乌变北约势力范围)
-1. [孩子在家门口玩耍遭毒蛇咬伤](https://so.toutiao.com/search?keyword=孩子在家门口玩耍遭毒蛇咬伤)
-1. [日元贬值 海外游客涌入日本扫货](https://so.toutiao.com/search?keyword=日元贬值+海外游客涌入日本扫货)
+1. [广东清远特大暴雨高铁车厢内进水](https://so.toutiao.com/search?keyword=广东清远特大暴雨高铁车厢内进水)
+1. [多家电商平台已下架哈尔滨麦道啤酒](https://so.toutiao.com/search?keyword=多家电商平台已下架哈尔滨麦道啤酒)
+1. [花27万彩礼订婚准新娘十余天后自尽](https://so.toutiao.com/search?keyword=花27万彩礼订婚准新娘十余天后自尽)
+1. [官方通报西安地铁10号线测试时追尾](https://so.toutiao.com/search?keyword=官方通报西安地铁10号线测试时追尾)
+1. [巴巴多斯是个什么样的国家](https://so.toutiao.com/search?keyword=巴巴多斯是个什么样的国家)
+1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
 1. [西安地铁试车时发生事故](https://so.toutiao.com/search?keyword=西安地铁试车时发生事故)
-1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
 1. [主持人：人均存款11万为何感受不到](https://so.toutiao.com/search?keyword=主持人：人均存款11万为何感受不到)
-1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
-1. [女生翩翩起舞似柔柔水波](https://so.toutiao.com/search?keyword=女生翩翩起舞似柔柔水波)
-1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
-1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
-1. [大妈排队领鸡蛋遭大爷摸臀猥亵](https://so.toutiao.com/search?keyword=大妈排队领鸡蛋遭大爷摸臀猥亵)
-1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
-1. [网约车司机问乘客自己能否吃点东西](https://so.toutiao.com/search?keyword=网约车司机问乘客自己能否吃点东西)
-1. [11岁学生被老师扇耳光打掉牙](https://so.toutiao.com/search?keyword=11岁学生被老师扇耳光打掉牙)
-1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
-1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
-1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
-1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
-1. [曝以发射3枚导弹“有限打击”伊朗](https://so.toutiao.com/search?keyword=曝以发射3枚导弹“有限打击”伊朗)
-1. [潍坊风筝节年轻人把发疯早八放上天](https://so.toutiao.com/search?keyword=潍坊风筝节年轻人把发疯早八放上天)
-1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
+1. [10秒延时视频记录佛山暴雨过程](https://so.toutiao.com/search?keyword=10秒延时视频记录佛山暴雨过程)
+1. [美媒：伊朗袭击以暴露武器库实力](https://so.toutiao.com/search?keyword=美媒：伊朗袭击以暴露武器库实力)
+1. [浪姐5陈丽君杀疯了](https://so.toutiao.com/search?keyword=浪姐5陈丽君杀疯了)
+1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
 1. [央视发文：调休原则是最小干预](https://so.toutiao.com/search?keyword=央视发文：调休原则是最小干预)
+1. [天窗排水孔堵塞 一家人在车内淋雨](https://so.toutiao.com/search?keyword=天窗排水孔堵塞+一家人在车内淋雨)
+1. [巴巴多斯宣布正式承认巴勒斯坦国](https://so.toutiao.com/search?keyword=巴巴多斯宣布正式承认巴勒斯坦国)
+1. [男子发现女友卖淫后提供住宿求合伙](https://so.toutiao.com/search?keyword=男子发现女友卖淫后提供住宿求合伙)
+1. [广东韶关暴雨致列车停运](https://so.toutiao.com/search?keyword=广东韶关暴雨致列车停运)
+1. [大妈排队领鸡蛋遭大爷摸臀猥亵](https://so.toutiao.com/search?keyword=大妈排队领鸡蛋遭大爷摸臀猥亵)
+1. [马斯克谈以色列袭击伊朗](https://so.toutiao.com/search?keyword=马斯克谈以色列袭击伊朗)
+1. [网约车司机问乘客自己能否吃点东西](https://so.toutiao.com/search?keyword=网约车司机问乘客自己能否吃点东西)
+1. [越南女首富被判死刑引发寻宝热潮](https://so.toutiao.com/search?keyword=越南女首富被判死刑引发寻宝热潮)
+1. [以色列打击伊朗核设施区谜团待解](https://so.toutiao.com/search?keyword=以色列打击伊朗核设施区谜团待解)
+1. [广东肇庆暴雨后街边出现大量黄泥水](https://so.toutiao.com/search?keyword=广东肇庆暴雨后街边出现大量黄泥水)
+1. [福建常务副省长郭宁宁兼任新职务](https://so.toutiao.com/search?keyword=福建常务副省长郭宁宁兼任新职务)
+1. [潍坊风筝节年轻人把发疯早八放上天](https://so.toutiao.com/search?keyword=潍坊风筝节年轻人把发疯早八放上天)
+1. [闪电击中房顶 院子里瞬间全是火花](https://so.toutiao.com/search?keyword=闪电击中房顶+院子里瞬间全是火花)
+1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
+1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
+1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
+1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
 1. [9岁坠亡男孩与母亲最后对话曝光](https://so.toutiao.com/search?keyword=9岁坠亡男孩与母亲最后对话曝光)
 1. [中国互联网30年 哪些产品昙花一现](https://so.toutiao.com/search?keyword=中国互联网30年+哪些产品昙花一现)
-1. [青海多地禁种人工繁育品冬虫夏草](https://so.toutiao.com/search?keyword=青海多地禁种人工繁育品冬虫夏草)
-1. [9岁男孩坠亡前曾被罚抄词一万遍](https://so.toutiao.com/search?keyword=9岁男孩坠亡前曾被罚抄词一万遍)
-1. [全红婵夺金后看到家人在现场很震惊](https://so.toutiao.com/search?keyword=全红婵夺金后看到家人在现场很震惊)
+1. [日元贬值 海外游客涌入日本扫货](https://so.toutiao.com/search?keyword=日元贬值+海外游客涌入日本扫货)
+1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
+1. [女演员为“男友”网上诈骗粉丝被捕](https://so.toutiao.com/search?keyword=女演员为“男友”网上诈骗粉丝被捕)
+1. [学者：德总理朔尔茨访华有三重意义](https://so.toutiao.com/search?keyword=学者：德总理朔尔茨访华有三重意义)
+1. [马斯克确认推迟访问印度](https://so.toutiao.com/search?keyword=马斯克确认推迟访问印度)
+1. [孩子在家门口玩耍遭毒蛇咬伤](https://so.toutiao.com/search?keyword=孩子在家门口玩耍遭毒蛇咬伤)
+1. [女生翩翩起舞似柔柔水波](https://so.toutiao.com/search?keyword=女生翩翩起舞似柔柔水波)
+1. [曝以发射3枚导弹“有限打击”伊朗](https://so.toutiao.com/search?keyword=曝以发射3枚导弹“有限打击”伊朗)
+1. [媒体：周鸿祎弃百万豪车不是偶然](https://so.toutiao.com/search?keyword=媒体：周鸿祎弃百万豪车不是偶然)
+1. [任家萱产后首次亮相专访活动](https://so.toutiao.com/search?keyword=任家萱产后首次亮相专访活动)
 1. [女子欲跳河轻生 路过警察果断拉住](https://so.toutiao.com/search?keyword=女子欲跳河轻生+路过警察果断拉住)
-1. [湖南失踪15岁男孩遗体已找到](https://so.toutiao.com/search?keyword=湖南失踪15岁男孩遗体已找到)
+1. [美媒：以军或将因战线过长力不从心](https://so.toutiao.com/search?keyword=美媒：以军或将因战线过长力不从心)
+1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
+1. [潍坊风筝节开启万物皆可飞模式](https://so.toutiao.com/search?keyword=潍坊风筝节开启万物皆可飞模式)
+1. [陈佩斯倪萍40年好友再相聚](https://so.toutiao.com/search?keyword=陈佩斯倪萍40年好友再相聚)
+1. [俄外长：不会允许乌变北约势力范围](https://so.toutiao.com/search?keyword=俄外长：不会允许乌变北约势力范围)
+1. [养老保险断缴即清零？官方辟谣](https://so.toutiao.com/search?keyword=养老保险断缴即清零？官方辟谣)
+1. [11岁学生被老师扇耳光打掉牙](https://so.toutiao.com/search?keyword=11岁学生被老师扇耳光打掉牙)
+1. [老人下跪求饶 旁边人为何拉着城管](https://so.toutiao.com/search?keyword=老人下跪求饶+旁边人为何拉着城管)
 1. [邱毅嘲讽朱立伦开出访问大陆条件](https://so.toutiao.com/search?keyword=邱毅嘲讽朱立伦开出访问大陆条件)
 1. [巴方向投赞成票的安理会成员国致敬](https://so.toutiao.com/search?keyword=巴方向投赞成票的安理会成员国致敬)
 1. [内蒙古库布齐沙漠养鸡治沙](https://so.toutiao.com/search?keyword=内蒙古库布齐沙漠养鸡治沙)
 1. [女生遇一“坨”胖狗 体重180斤左右](https://so.toutiao.com/search?keyword=女生遇一“坨”胖狗+体重180斤左右)
 1. [女子马路边被疑似带病流浪狗咬伤](https://so.toutiao.com/search?keyword=女子马路边被疑似带病流浪狗咬伤)
-1. [证监会新规每年为投资者省200亿元](https://so.toutiao.com/search?keyword=证监会新规每年为投资者省200亿元)
-1. [媒体：调休或仍是目前最优解](https://so.toutiao.com/search?keyword=媒体：调休或仍是目前最优解)
 1. [银价涨幅已超过金价](https://so.toutiao.com/search?keyword=银价涨幅已超过金价)
 1. [四川一武警出身的副县长拟任新职](https://so.toutiao.com/search?keyword=四川一武警出身的副县长拟任新职)
 1. [韩国瑜将访陆？韩国瑜办公室回应](https://so.toutiao.com/search?keyword=韩国瑜将访陆？韩国瑜办公室回应)
@@ -60,11 +77,9 @@
 1. [新任海军新闻发言人冷国伟首次亮相](https://so.toutiao.com/search?keyword=新任海军新闻发言人冷国伟首次亮相)
 1. [奔跑吧全场好像只有杨天真听懂规则](https://so.toutiao.com/search?keyword=奔跑吧全场好像只有杨天真听懂规则)
 1. [关晓彤连续7年为鹿晗庆生](https://so.toutiao.com/search?keyword=关晓彤连续7年为鹿晗庆生)
-1. [女演员为“男友”网上诈骗粉丝被捕](https://so.toutiao.com/search?keyword=女演员为“男友”网上诈骗粉丝被捕)
 1. [25岁女子被丈夫割喉杀害后的340天](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害后的340天)
 1. [湖北鹤峰成功避险突发滑坡地质灾害](https://so.toutiao.com/search?keyword=湖北鹤峰成功避险突发滑坡地质灾害)
 1. [易建联范志毅为鹿晗庆生](https://so.toutiao.com/search?keyword=易建联范志毅为鹿晗庆生)
-1. [媒体：周鸿祎弃百万豪车不是偶然](https://so.toutiao.com/search?keyword=媒体：周鸿祎弃百万豪车不是偶然)
 1. [林高远、王曼昱迎击日本张本兄妹](https://so.toutiao.com/search?keyword=林高远、王曼昱迎击日本张本兄妹)
 1. [广州内环路上一汽车突发自燃](https://so.toutiao.com/search?keyword=广州内环路上一汽车突发自燃)
 1. [入联遭美一票否决后巴方代表发声](https://so.toutiao.com/search?keyword=入联遭美一票否决后巴方代表发声)
@@ -88,7 +103,6 @@
 1. [深度体验极氪009光辉版](https://so.toutiao.com/search?keyword=深度体验极氪009光辉版)
 1. [TVB黄金配角陈狄克出殡](https://so.toutiao.com/search?keyword=TVB黄金配角陈狄克出殡)
 1. [林志颖现场观战F1为周冠宇助威](https://so.toutiao.com/search?keyword=林志颖现场观战F1为周冠宇助威)
-1. [美空军演习一次性出动12架B-2](https://so.toutiao.com/search?keyword=美空军演习一次性出动12架B-2)
 1. [成都一轿车疑似失控致1死](https://so.toutiao.com/search?keyword=成都一轿车疑似失控致1死)
 1. [海军在青岛召开媒体吹风会](https://so.toutiao.com/search?keyword=海军在青岛召开媒体吹风会)
 1. [住房以旧换新大规模推行难在哪](https://so.toutiao.com/search?keyword=住房以旧换新大规模推行难在哪)
